# chronobox

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  publish.yml
chronobox/: __init__.py  _logging.py
chronobox/analysis/: __init__.py  counterfactual.py  fevd.py  granger.py  hd.py  irf.py  spillover.py
chronobox/cli/: __init__.py  main.py
chronobox/core/: __init__.py  config.py  dates.py  lag_polynomial.py  results.py  transforms.py  tsdata.py
chronobox/datasets/: __init__.py  load.py  simulated.py
chronobox/decomposition/: __init__.py  classical.py  stl.py  x13_wrapper.py
chronobox/experiment/: __init__.py  experiment.py
chronobox/filters/: __init__.py  bk.py  bn.py  cf.py  hamilton.py  hp.py
chronobox/models/: __init__.py  ardl.py  arfima.py  arima.py  bvar.py  ecm.py  ets.py  favar.py  gvar.py  holtwinters.py  svar.py  theta.py  tvpvar.py  var.py  vecm.py
chronobox/reports/: __init__.py  css_manager.py  report_manager.py  template_manager.py
chronobox/selection/: __init__.py  auto_arima.py  auto_ets.py  lag_selection.py
chronobox/tests_stat/: __init__.py  base.py
chronobox/utils/: __init__.py  array_ops.py  logging.py  numba_core.py  validation.py
chronobox/visualization/: __init__.py  coef_plot.py  decomposition_plot.py  diagnostics_plot.py  export.py  fevd_plot.py  forecast_plot.py  hd_plot.py  irf_plot.py  spillover_plot.py  test_plot.py  themes.py  ts_plot.py
docs/: benchmarks.md  index.md
docs/api/: ardl.md  arima.md  cli.md  core.md  datasets.md  decomposition.md  diagnostics.md  ets.md  experiment.md  filters.md  index.md  models.md  reports.md  spillover.md  svar.md  testing.md  var.md  visualization.md
docs/benchmarks/: arima.md  comparison.md  ets.md  index.md  var.md
docs/contributing/: changelog.md  code-of-conduct.md  contributing.md  roadmap.md
docs/diagnostics/: index.md
docs/examples/: airline-analysis.md  business-cycle.md  cointegration-analysis.md  macro-var.md
docs/faq/: advanced.md  general.md  troubleshooting.md
docs/getting-started/: choosing-model.md  concepts.md  core-concepts.md  index.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/theory/: ardl-theory.md  arima-theory.md  bvar-theory.md  cointegration-theory.md  ets-theory.md  filters-theory.md  references.md  spillover-theory.md  svar-theory.md  var-theory.md  vecm-theory.md
docs/tutorials/: ardl.md  bvar.md  complete-workflow.md  ets.md  filters.md  fundamentals.md  index.md  spillover.md  svar.md  var.md  vecm.md
docs/user-guide/: ardl.md  arima.md  auto-arima.md  bk-filter.md  cf-filter.md  cli.md  cointegration-tests.md  datasets.md  decomposition.md  diagnostic-tests.md  experiment.md  hamilton-filter.md  hp-filter.md  index.md  performance.md  reports.md  svar.md  unit-root-tests.md  var.md  vecm.md  visualization.md
docs/visualization/: acf-pacf.md  diagnostic-plots.md  index.md  (+7 more)
tests/: conftest.py  test_ardl.py  test_bk.py  test_bn.py  test_cf.py  test_ecm.py  test_fase4_integration.py  test_hamilton.py  test_hp.py  test_integration.py  test_integration_f6.py  test_integration_fase2.py  test_integration_var.py  test_spillover.py
(+483 files in other folders)
